--- a/renovate.json
+++ b/renovate.json
@@ -4,6 +4,7 @@
   ],
   "packageRules": [
     {
+      "reviewers": ["WandersonGSantos"],
       "matchUpdateTypes": [
         "minor",
         "patch"
